--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
 google-auth==2.42.1
 google-genai==1.47.0
+greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -17,6 +19,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.3
@@ -25,6 +28,7 @@ python-dotenv==1.2.1
 requests==2.32.5
 rsa==4.9.1
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 tenacity==9.1.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
